fix: updateTable after to remove shirt